# Hack_huggingface_leRobot

./: .gitignore  Makefile
frontend/: README.md  chat_app.py  print_params.py  pyproject.toml  start_app.sh
modal-inference/: README.md  deploy_smolvla_modal_app.py  lerobot-deployment-test.py  lerobot-pusht-test.py  lerobot-smalvla-test.py  lerobot-test.py  lerobot-trigger-train,py
