[project]
name = "chat-app"
version = "0.1.0"
description = "Chat app that interfaces with print_params.py script"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "gradio (>=5.34.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
